<resources>
    <string name="app_name">Phonebook</string>
    <string name="add_new_contact">Add new contact</string>
    <string name="title_sign_in">Sign In</string>
    <string name="email">Email</string>
    <string name="greetings">Hello!</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="create_contact">Create contact</string>
    <string name="first_name">First name</string>
    <string name="second_name">Second name</string>
    <string name="patronymic">Patronymic</string>
    <string name="birthday">Date of birth</string>
    <string name="phone_number">Phone number</string>
    <string name="google_maps_key">AIzaSyCvqOuqMGvdGgS2GteabsA8qZTOHnc0EaA</string>
    <string name="title_activity_tab_bar">Main Activity</string>
    <string name="dark_mode">Dark mode</string>
    <string name="logout">Log out</string>
    <string name="font_size">Font size</string>
    <string name="english">English</string>
    <string name="russian">Russian</string>
    <string name="language">Language</string>
    <string name="title_settings">Settings</string>
    <string name="title_map">Map</string>
    <string name="title_phonebook">Phonebook</string>
    <string name="title_contacts">Contacts</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="load_video">Load video</string>
    <string name="gallery">Gallery</string>
    <string name="save">Save</string>
    <string name="style">Style</string>
    <string name="table">Table</string>
    <string name="list">List</string>
    <string name="all_fields">Fill all fields</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="updated">Contact is updated</string>
    <string name="created">Contact is created</string>
</resources>