<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.SettingsFragment"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp">

        <TextView
            android:id="@+id/text_theme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dark_mode" />

        <Space
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1">
        </Space>

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/theme_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="24dp">
    </Space>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity=""
        android:layout_marginHorizontal="16dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp">

        <TextView
            android:id="@+id/text_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/style" />

        <Space
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1">
        </Space>

        <RadioGroup
            android:id="@+id/radio_group_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/seek_bar_font_size">

            <RadioButton
                android:id="@+id/radio_table"
                android:layout_width="wrap_content"
                android:layout_height="24dp"
                android:text="@string/table" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="8dp"
                android:layout_weight="1">
            </Space>

            <RadioButton
                android:id="@+id/radio_list"
                android:layout_width="wrap_content"
                android:layout_height="24dp"
                android:text="@string/list" />
        </RadioGroup>
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="24dp">
    </Space>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:orientation="horizontal"
        tools:layout_editor_absoluteX="0dp">

        <TextView
            android:id="@+id/text_lang"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/language" />

        <Space
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1">
        </Space>

        <RadioGroup
            android:id="@+id/radio_group_language"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/seek_bar_font_size">

            <RadioButton
                android:id="@+id/radio_ru"
                android:layout_width="wrap_content"
                android:layout_height="24dp"
                android:text="@string/russian" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="8dp"
                android:layout_weight="1">
            </Space>

            <RadioButton
                android:id="@+id/radio_eng"
                android:layout_width="wrap_content"
                android:layout_height="24dp"
                android:text="@string/english" />
        </RadioGroup>
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="24dp">
    </Space>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp">

        <TextView
            android:id="@+id/text_font_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/font_size" />

        <Space
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1">
        </Space>

        <TextView
            android:id="@+id/font_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <SeekBar
            android:id="@+id/seek_bar_font_size"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:max="22"
            android:min="14"
            app:layout_constraintEnd_toEndOf="@+id/theme_switch"
            app:layout_constraintStart_toStartOf="@+id/theme_switch"
            app:layout_constraintTop_toBottomOf="@+id/theme_switch" />

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="24dp">
    </Space>

    <Button
        android:id="@+id/logout_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginHorizontal="16dp"
        android:text="@string/logout" />
</LinearLayout>